atualização de imagens

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
 
-<h1><img src="../../../Submitted%20files/MATHEUS%20BORTOLOTTI%20BRUNO/Site%20Super%20Pizza%2001/pizza.png" width="80px">ELITE PIZZA</h1>
+<h1><img src="pizza.webp" width="80px">ELITE PIZZA</h1>
 
 <h2>REDES SOCIAIS</h2>
 <a href="https://pt-br.facebook.com"><img src="facebook.webp" width="100px"></a>
