--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 
 <h3>SABORES</h3>    
 
-<a href="https://google.com"><img src="../../../Submitted%20files/MATHEUS%20BORTOLOTTI%20BRUNO/Site%20Super%20Pizza%2001/pizza%201.jpg" width="100px"></a>
-<a href="https://google.com"><img src="../../../Submitted%20files/MATHEUS%20BORTOLOTTI%20BRUNO/Site%20Super%20Pizza%2001/pizza2.jpg" width="100px"></a>
+<a href="https://google.com"><img src="pizza1.jpg" width="100px"></a>
+<a href="https://google.com"><img src="pizza2.jpg" width="100px"></a>
 <a href="https://google.com"><img src="pizza3.jpg" width="100px"></a>
 
 
