--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <h2>REDES SOCIAIS</h2>
 <a href="https://pt-br.facebook.com"><img src="facebook.webp" width="100px"></a>
-<a href="https://www.instagram.com"><img src="instagran.webp" width="100px"></a>
+<a href="https://www.instagram.com"><img src="instagram.webp" width="100px"></a>
 <a href="https://twitter.com"><img src="twiter.webp" width="100px"></a>
 <a href="https://www.tiktok.com"><img src="tiktok.webp" width="100px"></a>
 
