--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
        Elite Pizza 24 de Maio Rua 24 de maio<br> 208 - 1º Andar São Paulo <br>SP- CEP 01041-000 CNPJ: 03.709.814/0005-11 <br>Telefone (11) 2187-4482 Fax: (0)<br><br>
 
 
-       <a href="https://google.com"><img src="../../../Submitted%20files/MATHEUS%20BORTOLOTTI%20BRUNO/Site%20Super%20Pizza%2001/MAPA.png" width="500px"></a>
+       <a href="https://google.com"><img src="MAPA.png" width="500px"></a>
 
 
 
